# House-Price-Prediction-of-Real-Estate-Company

./: .dockerignore  .gitattributes  .gitignore  DockerFile  Dockerfile  LICENSE  README.md  app.py  compose.debug.yaml  compose.yaml  config.py  error_logs.py  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: hf_sync.yml  main.yml
.zen/: config.yaml
Special_Note/: requirements_Note.txt  zenmlnNote.txt
a_Preprocess/: b_DataClean.ipynb  f_FeatureEngineering.ipynb  outlier_detection.ipynb
artifacts/: columns.json  model.pickle  model.pkl  model_v2.pkl
c_Model/: Models.ipynb
c_Model/data/: v4_remove_outlier.csv
data/: Final_Pipelines_Data.csv  v1_EDA.csv  v2_Clean.csv  v3_Feature_Engineering.csv
f_pipeline/client/: app.html  app.js  app.py
f_pipeline/server/: server.py  util.py
notebooks/: Models.ipynb  a_EDA.ipynb  b_Cleaning.ipynb  b_cleaning.ipynb  c_feature selection.ipynb  d_feature_engineering.ipynb  e_models.ipynb
notebooks/b_Preprocess/: b_DataClean.ipynb
notebooks/c_Model/: Models.ipynb
pipelines/: ETLFeaturePipeline.py  Feature_Pipeline.py  util.py
pipelines/client/: app.js
pipelines/server/: server.py
src/: exception.py  logger.py
src/components/: a_load.py  b_clean.py  b_cleaning.py  c_feature_selection.py  d_feature_engineering.py  d_removing_outlier.py  e_model.py
src/pipelines/: ETLFeaturePipeline.py
src/utils/: predictor.py
static/css/: app.css  style.css
static/js/: app.js  main.js
steps/: a_load.py  b_clean.py  c_feature_engineering.py  d_removing_outlier.py
templates/: app.html
